srv/salt/dev/states/network/files/iptable-ipv4-dev.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o wlan0 -j MASQUERADE
-A POSTROUTING -o wwan0 -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p icmp -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 67 -j ACCEPT
-A INPUT s 0.0.0.0 -d 255.255.255.255 -i eth0 -p udp -m state --state NEW -m udp --dport 67 -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p icmp -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p udp -m state --state NEW -m udp --dport 67 -j ACCEPT
-A INPUT -s 0.0.0.0 -d 255.255.255.255 -i uap0 -p udp -m state --state NEW -m udp --dport 67 -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.4.0/24 -i uap0 -p tcp -m state --state NEW -m tcp --dport 9000 -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
#-A INPUT -m limit --limit 10/min -j LOG --log-prefix "iptables INPUT denied: " --log-level 7
-A INPUT -s 192.168.4.0/24 -i uap0 -j REJECT --reject-with icmp-host-prohibited
-A INPUT -j DROP
-A FORWARD -d 192.168.4.0/24 -i uap0 -j DROP
-A FORWARD -s 192.168.4.0/24 -i uap0 -j ACCEPT
-A FORWARD -d 192.168.4.0/24 -i wlan0 -j ACCEPT
-A FORWARD -d 192.168.4.0/24 -i wwan0 -j ACCEPT
#-A INPUT -m limit --limit 10/min -j LOG --log-prefix "iptables FORWARD denied: " --log-level 7
-A FORWARD -i uap0 -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j DROP
-A OUTPUT -j ACCEPT
COMMIT
